--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 
-body {
-  padding: 10px;
+ body {
+  margin: 0;
+  height: 100%;
 }
+
+html {
+  height: 100%;
+}
+
 
 $i:0;
 @while $i<=50 {
