--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,3 +45,11 @@ $i:0;
 
 .pull-right { float: right; }
 .pull-left { float: left; }
+
+.p-relative {
+  position: relative;
+}
+
+.p-absolute {
+  position: absolute;
+}
