#TASK Criando componente para perguntas ao usuário e melhorando script do chat de conversação :: #DOING

--- a/src/app/pages/chat-questions/chat-questions.component.html
+++ b/src/app/pages/chat-questions/chat-questions.component.html
@@ -1,3 +1,6 @@
-<p>
-  chat-questions works!
-</p>
+<div class="p-10">
+  <div class="text-center">
+    <h4>Por que escolheu esse tema?</h4>
+  </div>
+  <textarea rows="30" class="form-control note-editor note-editor-margin"></textarea>
+</div>
