--- a/src/styles.scss
+++ b/src/styles.scss
@@ -163,3 +163,11 @@ ng-select.simple > div {
 .display-none {
   display: none;
 }
+
+.color-orange-template {
+  color: orange;
+}
+
+.text-bold {
+  font-weight: bold;
+}
