--- a/src/app/pages/chat-feedback/chat-feedback.component.html
+++ b/src/app/pages/chat-feedback/chat-feedback.component.html
@@ -10,7 +10,7 @@
           <p class="chat-cont" *ngIf="message.typeMessage == 'text'">{{message.text}}</p>
           <div *ngIf="message.typeMessage == 'text-button'" class="chat-cont">
             <p>{{message.text}}</p>
-            <div class="text-center" *ngIf="message.model === 'question-feedback'" (click)="verifyScriptChatbot()">
+            <div class="text-center" *ngIf="message.model === 'question-feedback'" (click)="sendMessage('Não senti falta')">
               <button class="btn btn-primary c-pointer">
                 <span>Não senti falta</span>
               </button>
@@ -22,13 +22,13 @@
               </div>
             </div>
           </div>
-          <p class="chat-time pull-right">{{message.sendAt | date:"MMM d, y, h:mm:ss a"}}</p>
+          <p class="chat-time pull-right">{{message.sendAt | date:"MMM d, y, h:mm a"}}</p>
         </div>
       </div>
       <div class="media chat-messages" *ngIf="!message.isChatbot">
         <div class="media-body chat-menu-reply">
           <p class="chat-cont">{{message.text}}</p>
-          <p class="chat-time pull-right">{{message.sendAt | date:"MMM d, y, h:mm:ss a"}}</p>
+          <p class="chat-time pull-right">{{message.sendAt | date:"MMM d, y, h:mm a"}}</p>
         </div>
         <div class="media-right photo-table p-relative">
           <a href="javascript:">
