#TASK Ajustes no chatbot :: #RESOLVED

--- a/src/app/pages/edit-article/edit-article.component.html
+++ b/src/app/pages/edit-article/edit-article.component.html
@@ -24,7 +24,7 @@
       </tag-input>
     </div>
     <div class="col-12">
-      <textarea type="text" [(ngModel)]="article.seoMetaDescription" class="form-control input-description" name="seoMetaDescription" placeholder="Escreva um resumo do que se trata esse artigo. Essa descrição irá aparecem em sites de busca, como o Google."
+      <textarea type="text" [(ngModel)]="article.seoMetaDescription" class="form-control input-description" name="seoMetaDescription" placeholder="Escreva um resumo do que se trata esse artigo. Essa descrição irá aparecer em sites de busca, como o Google."
         autocomplete="off" required #seoMetaDescription="ngModel"></textarea>
     </div>
   </div>
