--- a/src/app/pages/see-article/see-article.component.scss
+++ b/src/app/pages/see-article/see-article.component.scss
@@ -4,7 +4,7 @@
 
   .va__box {
     padding: 20px;
-    background-color: #4099ff;
+    background-color: orange;
     color: #fff;
     text-shadow: 0 0 3px rgba(0, 0, 0, 0.8);
 
